Bug 357999 - Missing word in Low Difficulty warning message
Summary: Missing word in Low Difficulty warning message
Status: RESOLVED FIXED
Alias: None
Product: ksudoku
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Ian Wadham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-14 19:57 UTC by Karl Ove Hufthammer
Modified: 2018-07-07 16:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2016-01-14 19:57:00 UTC
The game contains the following error message:

After %1 tries, the best difficulty level achieved is %2, with internal difficulty rating %3, but you requested difficulty level %4. Do you wish to try again or accept the puzzle as is?\n
\n
If you accept the puzzle, it may help to change to No Symmetry or some low symmetry type, then use Game->New and try generating another puzzle.

I think there’s missing a “don’t” in the last sentence. (It makes no sense to change the symmetry if you *accept* the puzzle.)

Reproducible: Always
Comment 1 Gregor Mi 2018-05-16 00:45:08 UTC
This new message could solve this ticket: https://phabricator.kde.org/D12908
Comment 2 Gregor Mi 2018-07-07 16:55:06 UTC
Git commit b6e059b12644fa70693d47801dcdfc515923aba7 by Gregor Mi.
Committed on 07/07/2018 at 16:54.
Pushed by gregormi into branch 'master'.

Improve two messages

Summary:
Related: bug 242300

1. Improve Low Difficulty warning message to solve Bug 357999 ("Missing word in Low Difficulty warning message")
2. Improve Bug 242300 ('"Generate A Puzzle" hangs when big games like 16x16 or 25x25 games are chosen"): Warns users that generation of Unlimited mode puzzles takes long time
3. Explain better what "Enable all messages" means

Reviewers: #kde_games, aacid

Reviewed By: aacid

Subscribers: mreeves, aacid, ngraham, kde-games-devel

Differential Revision: https://phabricator.kde.org/D12908

M  +7    -6    src/generator/sudokuboard.cpp
M  +7    -2    src/gui/ksudoku.cpp

https://commits.kde.org/ksudoku/b6e059b12644fa70693d47801dcdfc515923aba7