Improve two messages

Summary:
BUG: 357999
CCBUG: 242300

1. Improve Low Difficulty warning message to solve Bug 357999 ("Missing word in Low Difficulty warning message")
2. Improve Bug 242300 ('"Generate A Puzzle" hangs when big games like 16x16 or 25x25 games are chosen"): Warns users that generation of Unlimited mode puzzles takes long time
3. Explain better what "Enable all messages" means

Reviewers: #kde_games, aacid

Reviewed By: aacid

Subscribers: mreeves, aacid, ngraham, kde-games-devel

Differential Revision: https://phabricator.kde.org/D12908